# Links-Storage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fixtures.json  pyproject.toml  server-entrypoint.sh  users.sql
api/: admin.py  og_parser.py  urls.py
api/management/commands/: createsuperuser-ifnotexists.py
api/migrations/: 0001_initial.py  0002_alter_collection_title_alter_link_link_type_and_more.py
api/models/: __init__.py  collection.py  link.py  user.py
api/serializers/: __init__.py  collections.py  links.py  users.py
api/views/: __init__.py  authenticate.py  change_password.py  collections_view.py  healthcheck_view.py  links_view.py  registration.py  reset_view.py  swagger.py
config_data/: config.py
project/: settings.py  urls.py
testlib/: client.py
tests/: conftest.py  test_integration.py
